# AirQualityMonitor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  README.txt
src/: main.cpp
src/api/: GIOSEndpoints.h  JsonParser.cpp  JsonParser.h  RestClient.cpp  RestClient.h
src/core/: Analyzer.cpp  Analyzer.h  DataController.cpp  DataController.h
src/gui/: AnalysisWidget.cpp  AnalysisWidget.h  ChartWidget.cpp  ChartWidget.h  MainWindow.cpp  MainWindow.h  MapWidget.cpp  MapWidget.h  resources.qrc
src/model/: AirQualityIndex.h  Measurement.h  Sensor.h  Station.h
src/storage/: IDatabase.h  JsonDatabase.cpp  JsonDatabase.h
tests/: CMakeLists.txt  test_Analyzer.cpp  test_JsonDatabase.cpp  test_JsonParser.cpp
